fix:no scrollbar on desktop for overflowing collections

--- a/Frontend/src/app/modules/oer/oer.component.scss
+++ b/Frontend/src/app/modules/oer/oer.component.scss
@@ -173,7 +173,6 @@
     }
   }
   .collections {
-    overflow-x: auto;
     width: calc(100% + 40px);
     margin:10px -20px;
   }
